MEMBUAT HEADER NAVBAR TITLE, BERITA, FOOTER

--- a/index.html
+++ b/index.html
@@ -7,16 +7,128 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
-    <title>Hello, world!</title>
+    <link rel="stylesheet" href="style/style.css">
+    <title>Belajar Website sederhana!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-center">
+  <a class="navbar-brand" href="#">WebKita</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
+  <div class="collapse navbar-collapse align-center" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Berita</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Profil</a>
+      </li>
+    </ul>
+
+  </div>
+</nav>
+
+<h1 class="display-5 text-center mt-3">WELCOLOME TO OUR WEBSITE!</h1>
+
+<div class="card text-center mt-3 mr-3 ml-3">
+  <div class="card-body">
+    <h5 class="card-title">Ini adalah Berita</h5>
+    <p class="card-text"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, officiis. Doloribus esse, corporis perspiciatis aliquam accusamus debitis et soluta fugit nisi deserunt voluptate placeat minima, quis veritatis labore laudantium dolorum?</span>
+    <span>Non ipsam tempore asperiores impedit distinctio animi amet dignissimos, fugit veritatis maiores, unde sequi eveniet ipsum voluptatem suscipit quasi velit quidem! Labore commodi, animi repellendus non quos officia illo vero.</span>
+    <span>Labore natus incidunt at exercitationem delectus error ipsum culpa molestias tempora expedita a excepturi maiores obcaecati dolores vitae nam nihil eos nemo, distinctio itaque necessitatibus dolor totam! Assumenda sapiente, laboriosam.</span></p>
+    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+  </div>
+</div>
+<div class="card text-center mt-3 mr-3 ml-3">
+  <div class="card-body">
+    <h5 class="card-title">Ini adalah Berita kedua</h5>
+    <p class="card-text"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, officiis. Doloribus esse, corporis perspiciatis aliquam accusamus debitis et soluta fugit nisi deserunt voluptate placeat minima, quis veritatis labore laudantium dolorum?</span>
+    <span>Non ipsam tempore asperiores impedit distinctio animi amet dignissimos, fugit veritatis maiores, unde sequi eveniet ipsum voluptatem suscipit quasi velit quidem! Labore commodi, animi repellendus non quos officia illo vero.</span>
+    <span>Labore natus incidunt at exercitationem delectus error ipsum culpa molestias tempora expedita a excepturi maiores obcaecati dolores vitae nam nihil eos nemo, distinctio itaque necessitatibus dolor totam! Assumenda sapiente, laboriosam.</span></p>
+    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+  </div>
+</div>
+<div class="card text-center mt-3 mr-3 ml-3">
+  <div class="card-body">
+    <h5 class="card-title">Ini adalah Berita ketiga</h5>
+    <p class="card-text"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, officiis. Doloribus esse, corporis perspiciatis aliquam accusamus debitis et soluta fugit nisi deserunt voluptate placeat minima, quis veritatis labore laudantium dolorum?</span>
+    <span>Non ipsam tempore asperiores impedit distinctio animi amet dignissimos, fugit veritatis maiores, unde sequi eveniet ipsum voluptatem suscipit quasi velit quidem! Labore commodi, animi repellendus non quos officia illo vero.</span>
+    <span>Labore natus incidunt at exercitationem delectus error ipsum culpa molestias tempora expedita a excepturi maiores obcaecati dolores vitae nam nihil eos nemo, distinctio itaque necessitatibus dolor totam! Assumenda sapiente, laboriosam.</span></p>
+    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+  </div>
+</div>
+
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
+
+<!-- Footer -->
+	<section id="footer">
+		<div class="container">
+			<div class="row text-center text-xs-center text-sm-left text-md-left">
+				<div class="col-xs-12 col-sm-4 col-md-4">
+					<h5>Quick links</h5>
+					<ul class="list-unstyled quick-links">
+						<li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Home</a></li>
+						<li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>About</a></li>
+						<li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>FAQ</a></li>
+						<li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Get Started</a></li>
+						<li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Videos</a></li>
+					</ul>
+				</div>
+				<div class="col-xs-12 col-sm-4 col-md-4">
+					<h5>Quick links</h5>
+					<ul class="list-unstyled quick-links">
+						<li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Home</a></li>
+						<li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>About</a></li>
+						<li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>FAQ</a></li>
+						<li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Get Started</a></li>
+						<li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Videos</a></li>
+					</ul>
+				</div>
+				<div class="col-xs-12 col-sm-4 col-md-4">
+					<h5>Quick links</h5>
+					<ul class="list-unstyled quick-links">
+						<li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Home</a></li>
+						<li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>About</a></li>
+						<li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>FAQ</a></li>
+						<li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i>Get Started</a></li>
+						<li><a href="https://wwwe.sunlimetech.com" title="Design and developed by"><i class="fa fa-angle-double-right"></i>Imprint</a></li>
+					</ul>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-5">
+					<ul class="list-unstyled list-inline social text-center">
+						<li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-facebook"></i></a></li>
+						<li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-twitter"></i></a></li>
+						<li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-instagram"></i></a></li>
+						<li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-google-plus"></i></a></li>
+						<li class="list-inline-item"><a href="javascript:void();" target="_blank"><i class="fa fa-envelope"></i></a></li>
+					</ul>
+				</div>
+				</hr>
+			</div>
+			<div class="row">
+				<div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center text-white">
+					<p><u><a href="https://www.nationaltransaction.com/">National Transaction Corporation</a></u> is a Registered MSP/ISO of Elavon, Inc. Georgia [a wholly owned subsidiary of U.S. Bancorp, Minneapolis, MN]</p>
+					<p class="h6">&copy All right Reversed.<a class="text-green ml-2" href="https://www.sunlimetech.com" target="_blank">Sunlimetech</a></p>
+				</div>
+				</hr>
+			</div>
+		</div>
+	</section>
+	<!-- ./Footer -->
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   </body>
 </html>
